Added required strings in strings.xml file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
+    <!-- Application Name -->
     <string name="app_name">CheckMate</string>
+
+    <!-- Application Version -->
+    <string name="app_version">1.0.0</string>
 </resources>
