--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
 
     <!-- Application Shortcuts -->
     <string name="shortcut_new_task">New Task</string>
+
+    <!-- Application Quick Tiles -->
+    <string name="tile_new_task">New Task</string>
 </resources>
