Added theme settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,16 @@
 
     <!-- Application Quick Tiles -->
     <string name="tile_new_task">New Task</string>
+
+    <!-- List Theme Settings -->
+    <string-array name="list_theme">
+        <item>System</item>
+        <item>Light</item>
+        <item>Dark</item>
+    </string-array>
+    <string-array name="list_theme_values">
+        <item>System</item>
+        <item>Light</item>
+        <item>Dark</item>
+    </string-array>
 </resources>
