--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,10 @@
         <item>Light</item>
         <item>Dark</item>
     </string-array>
+
+    <string-array name="dropdown_category">
+        <item>Sample01</item>
+        <item>Sample02</item>
+        <item>Sample03</item>
+    </string-array>
 </resources>
