Changed github link data to repository page instead of author page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
 
     <!-- Illustration Empty Texts -->
     <string name="empty_task">You currently have no task.</string>
+
+    <!-- External Links-->
+    <string name="website_github">https://github.com/eipna/CheckMate</string>
 </resources>
