--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
 
     <!-- Illustration Empty Texts -->
     <string name="empty_task">You currently have no task.</string>
+    <string name="empty_completed_tasks">You currently have no completed task.</string>
 
     <!-- External Links-->
     <string name="website_github">https://github.com/eipna/CheckMate</string>
