--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <!-- Text Input Layout Fields -->
     <string name="input_task_name">Name</string>
     <string name="input_task_notes">Notes</string>
+    <string name="input_date_created">Date Created</string>
 
     <!-- Button Texts -->
     <string name="button_create_task">Create task</string>
