--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <!-- Empty notes -->
     <string name="empty_notes">Empty notes.</string>
 
+    <!-- Empty task title error -->
+    <string name="empty_name">Name field is required.</string>
+
     <!-- Place Holder Strings -->
     <string name="placeholder_item_task_date_created">Monday, 22 July 2024</string>
     <string name="placeholder_item_task_name">Lorem Ipsum</string>
