--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="menu_clear_all">Clear All</string>
     <string name="menu_completed_tasks">Completed Tasks</string>
     <string name="menu_share">Share Notes</string>
+    <string name="menu_settings">Settings</string>
 
     <string name="menu_sort">Sort by</string>
     <string name="menu_sortAZ">Name (A to Z)</string>
@@ -79,6 +80,12 @@
     <string name="menu_sort_date_created_desc">Created (Oldest)</string>
     <string name="menu_sort_edit_asc">Edited (Latest)</string>
     <string name="menu_sort_edit_desc">Edited (Oldest)</string>
+
+    <string name="menu_filter_text">Filter by</string>
+    <string name="menu_filter_high">High</string>
+    <string name="menu_filter_medium">Medium</string>
+    <string name="menu_filter_low">Low</string>
+    <string name="menu_filter_default">No Priority</string>
 
     <!-- Text Input Layout Fields -->
     <string name="input_task_name">Name</string>
