--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="toolbar_create">New Task</string>
     <string name="toolbar_edit">Edit Task</string>
     <string name="toolbar_settings">Settings</string>
+    <string name="toolbar_completed">Completed Tasks</string>
 
     <!-- List Theme Settings -->
     <string-array name="list_theme">
