Added menu for task more options

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,4 +106,8 @@
     <string name="chip_priority_medium">Medium</string>
     <string name="chip_priority_low">Low</string>
     <string name="chip_priority_default">No Priority</string>
+
+    <!-- Task More Options Menu -->
+    <string name="menu_more_options_complete">Complete</string>
+    <string name="menu_more_options_delete">Delete</string>
 </resources>
